REFACTOR - ApiDataTypes imrovements
needs an easier way to  go from CQL types to the API types